--- a/plugin.xml
+++ b/plugin.xml
@@ -49,7 +49,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <dependency id="cordova-support-android-plugin" url="https://github.com/propelinc/cordova-support-android-plugin" commit="3a5242ab09e1bebe8dd29be4a9997396571bf70f"/>
         <dependency id="cordova-support-google-services" version="~1.2.0"/>
 
-        <framework src="com.google.android.gms:play-services-ads:$GOOGLE_SERVICES_VERSION" />
+        <framework src="com.google.android.gms:play-services-ads:9+" />
 
         <source-file src="src/android/IdfaPlugin.java"
             target-dir="src/by/chemerisuk/cordova/advertising/" />
